# Hackhaton-2

phase/.claude/agents/: todo-quality-reviewer.md
phase/.claude/skills/: README.md  command-parsing.md  error-handling.md  input-validation.md  output-formatting.md  python-console-cli.md
phase/history/prompts/constitution/: 001-todo-cli-constitution-creation.constitution.prompt.md
phase/history/prompts/general/: 001-create-project-skills.general.prompt.md
phase_1/: .gitignore  pyproject.toml
phase_1/.claude/agents/: todo-code-implementer.md  todo-plan-manager.md  todo-task-breaker.md  todo-task-manager.md
phase_1/.claude/skills/: clean-code-python.md  crud-operations.md  in-memory-data-store.md  python-data-models.md  python-testing.md  spec-driven-development.md  uv-package-management.md
phase_1/.specify/memory/: constitution.md
phase_1/history/prompts/1-todo-cli-core/: 001-create-todo-cli-specification.spec.prompt.md  002-create-implementation-plan.plan.prompt.md  003-create-task-breakdown.tasks.prompt.md
phase_1/specs/1-todo-cli-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase_1/specs/1-todo-cli-core/checklists/: requirements.md
phase_1/src/: __init__.py  main.py
phase_1/src/cli/: __init__.py  commands.py
phase_1/src/models/: __init__.py  exceptions.py  todo.py
phase_1/src/services/: todo_service.py
phase_1/src/store/: __init__.py  memory_store.py
phase_1/tests/integration/: test_cli.py
phase_1/tests/unit/: test_memory_store.py  test_todo_model.py  test_todo_service.py
